maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:20: error: not found: value aMurSud
	if ((!aMurSud(x,y)) && (getIndication(x,y-1)==9999)) {
              ^JediEscaper:28: error: not found: value aMurEst
	if ((!aMurEst(x,y)) && (getIndication(x+1,y)==9999)) {
              ^